Now built as a library. TODO not updated

--- a/LSM6DSV80X-STM-Library.ioc
+++ b/LSM6DSV80X-STM-Library.ioc
@@ -131,7 +131,7 @@ ProjectManager.ProjectName=LSM6DSV80X-STM-Library
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
-ProjectManager.TargetToolchain=Makefile
+ProjectManager.TargetToolchain=CMake
 ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
